--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Iwan (das Schreckliche)
+Theme Name: Iwan
 Theme URI: https://github.com/RRZE-Webteam
 Author: Barbara Bothe
 Author URI: http://www.rrze.uni-erlangen.de/
@@ -1359,8 +1359,6 @@ ul.nav-menu .focus > ul,
 	font-weight: 300;
 }
 .more-link {
-	display: block;
-	text-align: right;
 	font-size: .9em;
 	margin-top: 10px;
 }
@@ -1382,7 +1380,7 @@ ul.nav-menu .focus > ul,
 	padding: 0;
 }
 
-.entry-thumbnail img {
+.entry-thumbnail {
 	display: block;
 	margin: 0 10px 10px 0;
 	float: left;
@@ -1391,6 +1389,13 @@ ul.nav-menu .focus > ul,
 	-webkit-box-shadow: 0px 1px 2px 0px rgba(50, 50, 50, 0.5);
 	-moz-box-shadow:    0px 1px 2px 0px rgba(50, 50, 50, 0.5);
 	box-shadow:         0px 1px 2px 0px rgba(50, 50, 50, 0.5);
+}
+
+.entry-thumbnail img {
+	width: auto;
+	height: auto;
+	max-width: 300px;
+	max-height: 300px;
 }
 
 .entry-header {
@@ -1501,7 +1506,7 @@ ul.nav-menu .focus > ul,
 .entry-meta .author a:before {
 	content: "\f304";
 	position: relative;
-	top: -1px;
+	top: 1px;
 	color: #ABBCCD;
 }
 
@@ -1526,7 +1531,6 @@ ul.nav-menu .focus > ul,
 	color: #ABBCCD;
 }
 
-.single-author .entry-meta .author,
 .sticky.format-standard .entry-meta .date,
 .sticky.format-audio .entry-meta .date,
 .sticky.format-chat .entry-meta .date,
@@ -1575,8 +1579,13 @@ ul.nav-menu .focus > ul,
 .entry-content img.alignright,
 .entry-content .wp-caption.alignright {}
 
-footer.entry-meta {
-	margin-top: 24px;
+footer.entry-meta div {
+	margin: 10px 0;
+}
+footer.entry-meta .author {
+	font-style: italic;
+	background-color: #eef1f6;
+	padding: 2px 5px;
 }
 
 .format-standard footer.entry-meta {
@@ -2437,42 +2446,14 @@ footer.entry-meta {
  * ----------------------------------------------------------------------------
  */
 
-.error404 .page-header {
-	background-color: #fff;
-}
-
-.error404 .page-title {
-	line-height: 0.6;
-	margin: 0;
-	padding: 300px;
-	position: relative;
-	text-align: center;
-	width: auto;
-}
-
-.error404 .page-title:before {
-	color: #e8e5ce;
-	content: "\f423";
-	font-size: 964px;
-	line-height: 0.6;
-	overflow: hidden;
-	position: absolute;
-	left: 7px;
-	top: 28px;
-}
-
-.error404 .page-wrapper {
-	background-color: #e8e5ce;
-}
-
-.error404 .page-header,
-.error404 .page-content {
-	margin: 0 auto;
+.error404 .content-area {
 	max-width: 1040px;
-	padding-bottom: 40px;
-	width: 100%;
+	margin: 0 auto;
 }
-
+.error404 .page-content {
+	max-width: 1040px;
+	padding-top: 0;
+}
 
 /**
  * 5.12 Comments
