--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Iwan
-Theme URI: https://github.com/RRZE-Webteam
+Theme URI: https://github.com/RRZE-Webteam/Design-Iwan
 Author: Barbara Bothe
 Author URI: http://www.rrze.uni-erlangen.de/
 Description: Blog Theme für die FAU. Ihr habt es so gewollt.
